Change 1 - added list of projects

--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-<p>Cassi Williams</p>
+<!DOCTYPE html>
+
+<html>
+    <head>
+        <title>WV Cabin</title>
+    </head>
+
+    <body>
+        <header>
+            <h1>Phases of Cabin Improvement</h1>
+                <ul>
+                    <h2>Completed Projects</h2>
+                    <li>
+                        <p>Purchase</p>
+                    </li>
+                    <li>
+                        <p>Clean</p>
+                    </li>
+                    <li>
+                        <p>Remove</p>
+                    </li>
+                    <li>
+                        <p>Roof</p>
+                    </li>
+                    <li>
+                        <p>Siding</p>
+                    </li>
+                    <li>
+                        <p>Driveway</p>
+                    </li>
+                    <li>
+                        <p>Shed</p>
+                    </li>
+                    <h2>Future Projects</h2>
+                    <li>
+                        <p>New Flooring</p>
+                    </li>
+                    <li>
+                        <p>New Shower</p>
+                    </li>
+                    <li>
+                        <p>New Wall Covering</p>
+                    </li>
+                </ul>
+        </header>
+    </body>
+</html>
