Change 2 - Reviewing changes to header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>
             <h1>Phases of Cabin Improvement</h1>
                 <ul>
-                    <h2>Completed Projects</h2>
+                    <h3>Completed Projects</h3>
                     <li>
                         <p>Purchase</p>
                     </li>
@@ -43,5 +43,12 @@
                     </li>
                 </ul>
         </header>
+        <main>
+            <article>
+                <section>
+
+                </section>
+            </article>
+        </main>
     </body>
 </html>
