Change 3 - Adding phots and narrative

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                         <p>Purchase</p>
                     </li>
                     <li>
-                        <p>Clean</p>
+                        <p>Clean Up</p>
                     </li>
                     <li>
-                        <p>Remove</p>
+                        <p>Remove Ramp</p>
                     </li>
                     <li>
                         <p>Roof</p>
@@ -31,7 +31,7 @@
                     <li>
                         <p>Shed</p>
                     </li>
-                    <h2>Future Projects</h2>
+                    <h3>Future Projects</h3>
                     <li>
                         <p>New Flooring</p>
                     </li>
@@ -46,7 +46,34 @@
         <main>
             <article>
                 <section>
-
+                    <h2>Purchase</h2>
+                    <p>As soon as my husband and I arrived in Maryland, we knew that we wanted a place to get away from work and suburban city life on the weekends. We hadn't made a conscious effort to find that getaway, but an ad on Craigslist found us. Somewhere in West Virginia (yet another state unknown to us) was a little quaint cabin - in an RV park? - waiting for some TLC. We made an appointment with owner to see the little building, and we immediately fell in love. We had to hide our enthusiasm at first, though, because another couple was also viewing the cabin during the same appointment. We saw TONS of potential, but they had first dibs, so we waited for them to talk themselves out of it. They declined the opportunity to buy the cabin, and when they walked away, we handed the owner a downpayment to officially lay claim to the property. See in the photo below... what's not to love?!</p>
+                    <figure>
+                        <img src="images/20161222_purchase.jpg" alt="The cabin, right after we signed the documents making us property owners in West Virginia. Courtesy of Kemis Williams, co-owner.">
+                        <figcaption>
+                            The cabin, right after we signed the documents making us property owners in West Virginia. Courtesy of Kemis Williams, co-owner.
+                        </figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <h2>Clean Up</h2>
+                    <p>Once we bought the place, we had to wait from the end of December to the end of March to wait for the park to open and provide utilities. But once we got into the park, we had a lot of clean up work to do. The previous owner left furniture, clothes, dishes, towels, trash, and even tools. We sorted through everything and started the daunting task of removing all the stuff we didn't want and cleaning anything we wanted to keep.</p>
+                    <figure>
+                        <img src="images/20161230_clean_up.jpg" alt="The kitchen before we got started hauling out the unwanted items. Courtesy of Kemis Williams, co-owner.">
+                        <figcaption>
+                            The kitchen before we got started hauling out the unwanted items. Courtesy of Kemis Williams, co-owner.
+                        </figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <h2>Removal of the Ramp</h2>
+                    <p>The next big project required that we remove a handicap-accessible ramp from the front step. It didn't allow rainwater to drain properly, so the wood of the ramp and the front step both were rotten.</p>
+                    <figure>
+                        <img src="images/20170408_remove-ramp.jpg" alt="The ramp on the front step mostly removed. The builder had used nails, screws, AND glue to hold it together - it was a beast! Courtesy of Kemis Williams, co-owner.">
+                        <figcaption>
+                            The ramp on the front step mostly removed. The builder had used nails, screws, AND glue to hold it together - it was a beast! Courtesy of Kemis Williams, co-owner.
+                        </figcaption>
+                    </figure>
                 </section>
             </article>
         </main>
