Change 8 - added more of the store text

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
                         <p>Clean Up</p>
                     </li>
                     <li>
-                        <p>Remove Ramp</p>
+                        <p>Removal of the Ramp</p>
                     </li>
                     <li>
-                        <p>Roof</p>
+                        <p>Tree Removal</p>
+                    </li>
+                    <li>
+                        <p>New Roof</p>
                     </li>
                     <li>
                         <p>Siding</p>
@@ -72,6 +75,30 @@
                         <img src="images/20170408_remove-ramp.jpg" alt="The ramp on the front step mostly removed. The builder had used nails, screws, AND glue to hold it together - it was a beast! Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
                             The ramp on the front step mostly removed. The builder had used nails, screws, AND glue to hold it together - it was a beast! Courtesy of Kemis Williams, co-owner.
+                        </figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <h2>Tree Removal</h2>
+                    <p>After we made the front step safer, we moved on to removing an unhealthy pine tree from the front yard. The tree had several huge pine tar flows running down its sides that made an extremely sticky mess of anything that got close - or parked under it!</p>
+                    <figure>
+                        <img src="images/20170715_tree_removal1.jpg" alt="The pine tree in the front yard nearly topped. Courtesy of Kemis Williams, co-owner.">
+                        <figcaption>
+                            The pine tree in the front yard nearly topped. Courtesy of Kemis Williams, co-owner.
+                        </figcaption>
+                        <img src="images/20170715_tree_removal2.jpg" alt="The trunk of the pine tree coming down. Courtesy of Kemis Williams, co-owner."
+                        <figcaption>
+                            The trunk of the pine tree coming down. Courtesy of Kemis Williams, co-owner. Courtesy of Kemis Williams, co-owner.
+                        </figcaption>
+                    </figure>
+                </section>
+                <section>
+                    <h2>New Roof</h2>
+                    <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers!</p>
+                    <figure>
+                        <img src="images/20170822_new_roof.jpg" alt="The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.">
+                        <figcaption>
+                            The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.
                         </figcaption>
                     </figure>
                 </section>
