--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <article>
                 <section>
                     <h2>Purchase</h2>
-                    <p>As soon as my husband and I arrived in Maryland, we knew that we wanted a place to get away from work and suburban city life on the weekends. We hadn't made a conscious effort to find that getaway, but an ad on Craigslist found us. Somewhere in West Virginia (yet another state unknown to us) was a little quaint cabin - in an RV park? - waiting for some TLC. We made an appointment with owner to see the little building, and we immediately fell in love. We had to hide our enthusiasm at first, though, because another couple was also viewing the cabin during the same appointment. We saw TONS of potential, but they had first dibs, so we waited for them to talk themselves out of it. They declined the opportunity to buy the cabin, and when they walked away, we handed the owner a downpayment to officially lay claim to the property. See in the photo below... what's not to love?!</p>
+                    <p>As soon as my husband and I arrived in Maryland, we knew that we wanted a place to get away from work and suburban city life on the weekends. We hadn't made a conscious effort to find that getaway, but an ad on Craigslist&reg; found us. Somewhere in West Virginia (yet another state unknown to us) was a little quaint cabin - in an RV park? - waiting for some TLC. We made an appointment with owner to see the little building, and we immediately fell in love. We had to hide our enthusiasm at first, though, because another couple was also viewing the cabin during the same appointment. We saw TONS of potential, but they had first dibs, so we waited for them to talk themselves out of it. They declined the opportunity to buy the cabin, and when they walked away, we handed the owner a downpayment to officially lay claim to the property. See in the photo below... what's not to love?!</p>
                     <figure>
                         <img src="images/20161222_purchase.jpg" alt="The cabin, right after we signed the documents making us property owners in West Virginia. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
@@ -94,7 +94,7 @@
                 </section>
                 <section>
                     <h2>New Roof</h2>
-                    <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers!</p>
+                    <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers! We had much better luck with a second crew that was recommended by a neighbor. In just about 4 hours, they stripped off the old roof, replaced several sections of the plywood, completely reshingled the entire roof, then cleaned up! And not a minute too soon... they'd been done about 15 minutes when the skies opened up for good, drenching, West Virginia rain!</p>
                     <figure>
                         <img src="images/20170822_new_roof.jpg" alt="The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
@@ -104,5 +104,8 @@
                 </section>
             </article>
         </main>
+        <footer>
+            <p>&copy; 2020 Cassi Williams</p>
+        </footer>
     </body>
 </html>
