Change 10 - fixed spacing within a figure

--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
                         <figcaption>
                             The pine tree in the front yard nearly topped. Courtesy of Kemis Williams, co-owner.
                         </figcaption>
+                    </figure>
+                    <figure>
                         <img src="images/20170715_tree_removal2.jpg" alt="The trunk of the pine tree coming down. Courtesy of Kemis Williams, co-owner."
                         <figcaption>
                             The trunk of the pine tree coming down. Courtesy of Kemis Williams, co-owner. Courtesy of Kemis Williams, co-owner.
@@ -94,7 +96,7 @@
                 </section>
                 <section>
                     <h2>New Roof</h2>
-                    <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers! We had much better luck with a second crew that was recommended by a neighbor. In just about 4 hours, they stripped off the old roof, replaced several sections of the plywood, completely reshingled the entire roof, then cleaned up! And not a minute too soon... they'd been done about 15 minutes when the skies opened up for good, drenching, West Virginia rain!</p>
+                    <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers! We had much better luck with a second crew that was recommended by a neighbor. In just about 4 hours, they stripped off the old roof, replaced several sections of the plywood, completely reshingled the entire roof, then cleaned up! And not a minute too soon... they'd been done about 15 minutes when the skies opened up for a good, drenching, West Virginia rain!</p>
                     <figure>
                         <img src="images/20170822_new_roof.jpg" alt="The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
