Change 11 - trying to fix figcaption error

--- a/index.html
+++ b/index.html
@@ -83,15 +83,11 @@
                     <p>After we made the front step safer, we moved on to removing an unhealthy pine tree from the front yard. The tree had several huge pine tar flows running down its sides that made an extremely sticky mess of anything that got close - or parked under it!</p>
                     <figure>
                         <img src="images/20170715_tree_removal1.jpg" alt="The pine tree in the front yard nearly topped. Courtesy of Kemis Williams, co-owner.">
-                        <figcaption>
-                            The pine tree in the front yard nearly topped. Courtesy of Kemis Williams, co-owner.
-                        </figcaption>
+                        <figcaption>The pine tree in the front yard nearly topped. Courtesy of Kemis Williams, co-owner.</figcaption>
                     </figure>
                     <figure>
                         <img src="images/20170715_tree_removal2.jpg" alt="The trunk of the pine tree coming down. Courtesy of Kemis Williams, co-owner."
-                        <figcaption>
-                            The trunk of the pine tree coming down. Courtesy of Kemis Williams, co-owner. Courtesy of Kemis Williams, co-owner.
-                        </figcaption>
+                        <figcaption>The trunk of the pine tree coming down. Courtesy of Kemis Williams, co-owner. Courtesy of Kemis Williams, co-owner.</figcaption>
                     </figure>
                 </section>
                 <section>
