Updated styles in CSS

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>WV Cabin</title>
-        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
@@ -11,30 +11,14 @@
             <h1>Phases of Cabin Improvement</h1>
                 <ul>
                     <h3>Completed Projects</h3>
-                    <li>
-                        <p>Purchase</p>
-                    </li>
-                    <li>
-                        <p>Clean Up</p>
-                    </li>
-                    <li>
-                        <p>Removal of the Ramp</p>
-                    </li>
-                    <li>
-                        <p>Tree Removal</p>
-                    </li>
-                    <li>
-                        <p>New Roof</p>
-                    </li>
-                    <li>
-                        <p>Paved Driveway</p>
-                    </li>
-                    <li>
-                        <p>New Siding</p>
-                    </li>
-                    <li>
-                        <p>New Shed</p>
-                    </li>
+                    <li><p>Purchase</p></li>
+                    <li><p>Clean Up</p></li>
+                    <li><p>Removal of the Ramp</p></li>
+                    <li><p>Tree Removal</p></li>
+                    <li><p>New Roof</p></li>
+                    <li><p>Paved Driveway</p></li>
+                    <li><p>New Siding</p></li>
+                    <li><p>New Shed</p></li>
                     <h3>Future Projects</h3>                 
                 </ul>
         </header>
@@ -43,7 +27,7 @@
                 <section>
                     <h2>Purchase</h2>
                     <p>As soon as my husband and I arrived in Maryland, we knew that we wanted a place to get away from work and suburban city life on the weekends. We hadn't made a conscious effort to find that getaway, but an ad on Craigslist&reg; found us. Somewhere in West Virginia (yet another state unknown to us) was a little quaint cabin - in an RV park? - waiting for some TLC. We made an appointment with owner to see the little building, and we immediately fell in love. We had to hide our enthusiasm at first, though, because another couple was also viewing the cabin during the same appointment. We saw TONS of potential, but they had first dibs, so we waited for them to talk themselves out of it. They declined the opportunity to buy the cabin, and when they walked away, we handed the owner a downpayment to officially lay claim to the property. See in the photo below... what's not to love?!</p>
-                    <figure>
+                    <figure class = "figure-border">
                         <img src="images/20161222_purchase.jpg" alt="The cabin, right after we signed the documents making us property owners in West Virginia. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
                             The cabin, right after we signed the documents making us property owners in West Virginia. Courtesy of Kemis Williams, co-owner.
@@ -52,8 +36,8 @@
                 </section>
                 <section>
                     <h2>Clean Up</h2>
-                    <p>Once we bought the place, we had to wait from the end of December to the end of March to wait for the park to open and provide utilities. But once we got into the park, we had a lot of clean up work to do. The previous owner left furniture, clothes, dishes, towels, trash, and even tools. We sorted through everything and started the daunting task of removing all the stuff we didn't want and cleaning anything we wanted to keep.</p>
-                    <figure>
+                    <p>Once we bought the place, we had to wait from the end of December until the end of March to wait for the park to open and provide utilities. But once we got into the park, we had a lot of clean up work to do. The previous owner left furniture, clothes, dishes, towels, trash, and even tools. We sorted through everything and started the daunting task of removing all the stuff we didn't want and cleaning anything we wanted to keep.</p>
+                    <figure class = "figure-border">
                         <img src="images/20161230_clean_up.jpg" alt="The kitchen before we got started hauling out the unwanted items. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
                             The kitchen before we got started hauling out the unwanted items. Courtesy of Kemis Williams, co-owner.
@@ -62,18 +46,18 @@
                 </section>
                 <section>
                     <h2>Removal of the Ramp</h2>
-                    <p>The next big project required that we remove a handicap-accessible ramp from the front step. It didn't allow rainwater to drain properly, so the wood of the ramp and the front step both were rotten.</p>
-                    <figure>
+                    <p>The next big project required that we remove a handicap-accessible ramp from the front step. It didn't allow rainwater to drain properly, so the wood of the ramp and the front step both were rotten. The builder had used nails, screws, AND glue to hold it together - it was a beast!</p>
+                    <figure class = "figure-border">
                         <img src="images/20170408_remove-ramp.jpg" alt="The ramp on the front step mostly removed. The builder had used nails, screws, AND glue to hold it together - it was a beast! Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
-                            The ramp on the front step mostly removed. The builder had used nails, screws, AND glue to hold it together - it was a beast! Courtesy of Kemis Williams, co-owner.
+                            The ramp on the front step mostly removed. Courtesy of Kemis Williams, co-owner.
                         </figcaption>
                     </figure>
                 </section>
                 <section>
                     <h2>Tree Removal</h2>
                     <p>After we made the front step safer, we moved on to removing an unhealthy pine tree from the front yard. The tree had several huge pine tar flows running down its sides that made an extremely sticky mess of anything that got close - or parked under it!</p>
-                    <figure>
+                    <figure class = "figure-border">
                         <img src="images/20170715_tree_removal.jpg" alt="The pine tree in the front yard nearly topped. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>The pine tree in the front yard nearly topped. Courtesy of Kemis Williams, co-owner.</figcaption>
                     </figure>
@@ -81,7 +65,7 @@
                 <section>
                     <h2>New Roof</h2>
                     <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers! We had much better luck with a second crew that was recommended by a neighbor. In just about 4 hours, they stripped off the old roof, replaced several sections of the plywood, completely reshingled the entire roof, then cleaned up! And not a minute too soon... they'd been done about 15 minutes when the skies opened up for a good, drenching, West Virginia rain!</p>
-                    <figure>
+                    <figure class = "figure-border">
                         <img src="images/20170822_new_roof.jpg" alt="The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
                             The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.
@@ -91,7 +75,7 @@
                 <section>
                     <h2>Paved Driveway</h2>
                     <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers! We had much better luck with a second crew that was recommended by a neighbor. In just about 4 hours, they stripped off the old roof, replaced several sections of the plywood, completely reshingled the entire roof, then cleaned up! And not a minute too soon... they'd been done about 15 minutes when the skies opened up for a good, drenching, West Virginia rain!</p>
-                    <figure>
+                    <figure class = "figure-border">
                         <img src="images/20180614_new_driveway.jpg" alt="The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
                             The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.
@@ -101,7 +85,7 @@
                 <section>
                     <h2>New Siding</h2>
                     <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers! We had much better luck with a second crew that was recommended by a neighbor. In just about 4 hours, they stripped off the old roof, replaced several sections of the plywood, completely reshingled the entire roof, then cleaned up! And not a minute too soon... they'd been done about 15 minutes when the skies opened up for a good, drenching, West Virginia rain!</p>
-                    <figure>
+                    <figure class = "figure-border">
                         <img src="images/20180706_siding.jpg" alt="The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
                             The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.
@@ -111,7 +95,7 @@
                 <section>
                     <h2>New Shed</h2>
                     <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers! We had much better luck with a second crew that was recommended by a neighbor. In just about 4 hours, they stripped off the old roof, replaced several sections of the plywood, completely reshingled the entire roof, then cleaned up! And not a minute too soon... they'd been done about 15 minutes when the skies opened up for a good, drenching, West Virginia rain!</p>
-                    <figure>
+                    <figure class = "figure-border">
                         <img src="images/20180924_new_shed.jpg" alt="The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
                             The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.
@@ -119,7 +103,7 @@
                     </figure>
                 </section>
                 <section>
-                    <h2>Future Projects</h2>
+                    <h2 id = "flashyFont">Future Projects</h2>
                     <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers! We had much better luck with a second crew that was recommended by a neighbor. In just about 4 hours, they stripped off the old roof, replaced several sections of the plywood, completely reshingled the entire roof, then cleaned up! And not a minute too soon... they'd been done about 15 minutes when the skies opened up for a good, drenching, West Virginia rain!</p>
                 </section>
             </article>
