--- a/index.html
+++ b/index.html
@@ -74,37 +74,37 @@
                 </section>
                 <section>
                     <h2>Paved Driveway</h2>
-                    <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers! We had much better luck with a second crew that was recommended by a neighbor. In just about 4 hours, they stripped off the old roof, replaced several sections of the plywood, completely reshingled the entire roof, then cleaned up! And not a minute too soon... they'd been done about 15 minutes when the skies opened up for a good, drenching, West Virginia rain!</p>
+                    <p>While getting new siding onto the building was our next priority, we had to wait a couple of weeks due to a scheduling conflict with the contractor. We didn't want to waste beautiful summer weather, so we moved ahead with the next project in line: paving a new driveway. My hadband and I ride Harleys, so the lack of paved parking - and the muddy slope of the yard - made it difficult to safely park our bikes at the cabin between rides. The asphalt made all the difference!</p>
                     <figure class = "figure-border">
                         <img src="images/20180614_new_driveway.jpg" alt="The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
-                            The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.
+                            The new driveway created plenty of parking. Courtesy of Kemis Williams, co-owner.
                         </figcaption>
                     </figure>
                 </section>
                 <section>
                     <h2>New Siding</h2>
-                    <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers! We had much better luck with a second crew that was recommended by a neighbor. In just about 4 hours, they stripped off the old roof, replaced several sections of the plywood, completely reshingled the entire roof, then cleaned up! And not a minute too soon... they'd been done about 15 minutes when the skies opened up for a good, drenching, West Virginia rain!</p>
+                    <p>Once we got the scheduling figured out with the contractor, the process of siding went pretty quickly. Two side of the cabin had had no siding to protect the bare plywood exterior walls, and two walls had siding that was painted and failing in several places. Our humble little getaway was the eyesore of the neighborhood! With new siding, the whole property looked a ton better!</p>
                     <figure class = "figure-border">
                         <img src="images/20180706_siding.jpg" alt="The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
-                            The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.
+                            The new siding gave the cabin a whole new look! Courtesy of Kemis Williams, co-owner.
                         </figcaption>
                     </figure>
                 </section>
                 <section>
                     <h2>New Shed</h2>
-                    <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers! We had much better luck with a second crew that was recommended by a neighbor. In just about 4 hours, they stripped off the old roof, replaced several sections of the plywood, completely reshingled the entire roof, then cleaned up! And not a minute too soon... they'd been done about 15 minutes when the skies opened up for a good, drenching, West Virginia rain!</p>
+                    <p>We were making progress in leaps and bounds! Our little rustic cabin now had a new roof, newsiding, new front steps, and even a new driveway. Now it was time to add something to the property that was really more <i>want</i> than <i> need </i>... a new shed/ workshop/ garage for the bikes!</p>
                     <figure class = "figure-border">
                         <img src="images/20180924_new_shed.jpg" alt="The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
-                            The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.
+                            The shed would serve as garden shed, workshop, and motorcycle garage. Courtesy of Kemis Williams, co-owner.
                         </figcaption>
                     </figure>
                 </section>
                 <section>
                     <h2 id = "flashyFont">Future Projects</h2>
-                    <p>With some of the worst trees out of the way, we realized that the roof of our little haven was desperately in need of replacement. We first hired a local guy to do the work, but he turned out to be unreliable. We learned a valuable lesson through this process: ask your neighbors for their recommendations and reviews of local workers! We had much better luck with a second crew that was recommended by a neighbor. In just about 4 hours, they stripped off the old roof, replaced several sections of the plywood, completely reshingled the entire roof, then cleaned up! And not a minute too soon... they'd been done about 15 minutes when the skies opened up for a good, drenching, West Virginia rain!</p>
+                    <p>We got a lot done in just a couple of summers, but there will always be more to do! We still need to reinforce some sections of flooring, update the bathroom and add a shower, and repaint interior walls. The list is much longer than these three projects, but there's no need to get too far ahead of ourselves. We realize that no matter how much we get done at the cabin, there will ALWAYS be more projects to keep us busy!</p>
                 </section>
             </article>
         </main>
