Updated changes to HTML and CSS that were not captured in previous save

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <h2>Paved Driveway</h2>
                     <p>While getting new siding onto the building was our next priority, we had to wait a couple of weeks due to a scheduling conflict with the contractor. We didn't want to waste beautiful summer weather, so we moved ahead with the next project in line: paving a new driveway. My hadband and I ride Harleys, so the lack of paved parking - and the muddy slope of the yard - made it difficult to safely park our bikes at the cabin between rides. The asphalt made all the difference!</p>
                     <figure class = "figure-border">
-                        <img src="images/20180614_new_driveway.jpg" alt="The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.">
+                        <img src="images/20180614_new_driveway.jpg" alt="New paved driveway laid down beside and in front of the cabin. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
                             The new driveway created plenty of parking. Courtesy of Kemis Williams, co-owner.
                         </figcaption>
@@ -86,7 +86,7 @@
                     <h2>New Siding</h2>
                     <p>Once we got the scheduling figured out with the contractor, the process of siding went pretty quickly. Two side of the cabin had had no siding to protect the bare plywood exterior walls, and two walls had siding that was painted and failing in several places. Our humble little getaway was the eyesore of the neighborhood! With new siding, the whole property looked a ton better!</p>
                     <figure class = "figure-border">
-                        <img src="images/20180706_siding.jpg" alt="The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.">
+                        <img src="images/20180706_siding.jpg" alt="Siding being installed on the cabin. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
                             The new siding gave the cabin a whole new look! Courtesy of Kemis Williams, co-owner.
                         </figcaption>
@@ -96,7 +96,7 @@
                     <h2>New Shed</h2>
                     <p>We were making progress in leaps and bounds! Our little rustic cabin now had a new roof, newsiding, new front steps, and even a new driveway. Now it was time to add something to the property that was really more <i>want</i> than <i> need </i>... a new shed/ workshop/ garage for the bikes!</p>
                     <figure class = "figure-border">
-                        <img src="images/20180924_new_shed.jpg" alt="The second roofing crew reinforced the roof structure then put on new shingles. Courtesy of Kemis Williams, co-owner.">
+                        <img src="images/20180924_new_shed.jpg" alt="The new shed being placed by the builder. Courtesy of Kemis Williams, co-owner.">
                         <figcaption>
                             The shed would serve as garden shed, workshop, and motorcycle garage. Courtesy of Kemis Williams, co-owner.
                         </figcaption>
